--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "nocr": "^1.2.0",
     "node-image-filter": "^1.0.0",
     "obs-websocket-js": "^4.0.2",
-    "tesseract.js": "^2.1.4"
+    "tesseract.js": "^2.1.4",
+    "xml2js": "^0.4.23"
   }
 }
